Second @GetMapping added.